# routes/web.php
@@ -16,3 +16,19 @@
 $router->get('/', function () use ($router) {
     return $router->app->version();
 });
+
+$router->group(['prefix' => 'v1'], function () use ($router) {
+    $router->group(['prefix' => 'auth'], function () use ($router) {
+        $router->post('login', 'AuthController@login');
+        $router->post('register', 'AuthController@register');
+        $router->post('logout', 'AuthController@logout');
+        $router->post('refresh', 'AuthController@refresh');
+        $router->post('me', 'AuthController@me');
+        $router->patch('change-password', 'AuthController@changePassword');
+    });
+
+    $router->group(['prefix' => 'organization', 'middleware' => 'auth:api'], function () use ($router) {
+        $router->get('/', 'OrganizationController@getById');
+        $router->post('/', 'OrganizationController@store');
+    });
+});
